syntax = "proto3";

package meshservice;

option go_package = "github.com/aschmidt75/wgmesh/meshservice";

service Agent {
    // Tag sets a tag on a wgmesh node
    rpc Tag(TagRequest) returns (TagResult) {}

    // Untag remove a tag on a wgmesh node
    rpc Untag(TagRequest) returns (TagResult) {}

    // RTT yields the complete rtt timings for all nodes
    rpc RTT(AgentEmpty) returns (stream RTTInfo) {}
}

message AgentEmpty {
}

message RTTNodeInfo {
    string nodeName = 1;
    int32 rttMsec = 2;
}

message RTTInfo {
    string nodeName = 1;
    repeated RTTNodeInfo rtts = 2;
}


message TagResult {
    bool ok = 1;
}

message TagRequest {
    string key = 1;
    string value = 2;
}

